--- a/dot_files/prometheus/compton/config
+++ b/dot_files/prometheus/compton/config
@@ -19,9 +19,10 @@ blur-strength         = 7;
 backend               = "glx";
 vsync                 = "opengl-swc";
 
-# WORKSPACE FADING
+# WORKSPACE FADING/DIMMING
 fading                = true;
 fade-delta            = 3;
 fade-in-step          = 0.03;
 fade-out-step         = 0.03;
 frame-opacity         = 1;
+inactive-dim          = 0.15;
