--- a/dot_files/lazarus/compton/config
+++ b/dot_files/lazarus/compton/config
@@ -1,11 +1,11 @@
 # SHADOW
-shadow              = true; 		# Enabled client-side shadows on windows
-no-dock-shadow      = true; 		# Avoid drawing shadows on dock/panel windows
-no-dnd-shadow       = true; 		# Don't draw shadows on drag-and-drop windows
-clear-shadow        = true; 		# Zero the part of the shadow's mask behind the window (experimental)
-shadow-radius       = 13;   		# The blur radius for shadows (default 12)
-shadow-offset-x     = -7;   		# The left offset for shadows (default -15)
-shadow-offset-y     = -7;   		# The top offset for shadows (default -15)
+shadow              = true;           # Enabled client-side shadows on windows
+no-dock-shadow      = true;           # Avoid drawing shadows on dock/panel windows
+no-dnd-shadow       = true;           # Don't draw shadows on drag-and-drop windows
+clear-shadow        = true;           # Zero the part of the shadow's mask behind the window (experimental)
+shadow-radius       = 8;              # The blur radius for shadows (default 12)
+shadow-offset-x     = -5;             # The left offset for shadows (default -15)
+shadow-offset-y     = -5;             # The top offset for shadows (default -15)
 
 # BLUR
 blur-background       = true;
@@ -25,3 +25,4 @@ fade-delta            = 3;
 fade-in-step          = 0.03;
 fade-out-step         = 0.03;
 frame-opacity         = 1;
+inactive-dim          = 0.15;
