--- a/dot_files/prometheus/i3/config
+++ b/dot_files/prometheus/i3/config
@@ -10,6 +10,9 @@ set $HOME               /home/$USER
 set $mod                Mod1
 set $bor_width          0
 set $bor_radius         4
+set $scratch_border     6
+set $display_dev_1      DP-1
+set $display_dev_2      DP-2
 
 #----------------------- i3 configuration --------------------------------------
 
@@ -22,17 +25,17 @@ border_radius           $bor_radius
 for_window [class="^.*"] border pixel $bor_width
 
 ## binding workspace to display
-workspace "1"           output DP-1
-workspace "2"           output DP-1
-workspace "3"           output DP-1
-workspace "4"           output DP-1
-workspace "9"           output DP-1
+workspace "1"           output $display_dev_1
+workspace "2"           output $display_dev_1
+workspace "3"           output $display_dev_1
+workspace "4"           output $display_dev_1
+workspace "9"           output $display_dev_1
 
-workspace "5"           output DP-2
-workspace "6"           output DP-2
-workspace "7"           output DP-2
-workspace "8"           output DP-2
-workspace "10"          output DP-2
+workspace "5"           output $display_dev_2
+workspace "6"           output $display_dev_2
+workspace "7"           output $display_dev_2
+workspace "8"           output $display_dev_2
+workspace "10"          output $display_dev_2
 
 # creating gaps between the windows
 gaps inner              20
@@ -58,12 +61,12 @@ client.background       #ffffff
 for_window[instance="scratch_py"] floating enable
 for_window[instance="scratch_py"] resize set 925 500
 for_window[instance="scratch_py"] move scratchpad
-for_window[instance="scratch_py"] border pixel 6
+for_window[instance="scratch_py"] border pixel $scratch_border
 
 for_window[instance="scratch_term"] floating enable
 for_window[instance="scratch_term"] resize set 925 500
 for_window[instance="scratch_term"] move scratchpad
-for_window[instance="scratch_term"] border pixel 6
+for_window[instance="scratch_term"] border pixel $scratch_border
 
 #----------------------- autostart with i3 -------------------------------------
 
