--- a/dot_files/prometheus/alacritty/alacritty.yml
+++ b/dot_files/prometheus/alacritty/alacritty.yml
@@ -106,7 +106,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Iosevka Term
+    family: Iosevka Term 
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -117,7 +117,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Iosevka Term
+    family: Fira Code
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -128,7 +128,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Iosevka Term
+    family: Fira Code
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -139,7 +139,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Iosevka Term
+    family: Fira Code
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
@@ -242,7 +242,7 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.75
+background_opacity: 0.85
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
@@ -503,6 +503,10 @@ key_bindings:
   - { key: Down,     mods: Alt,           action: None }
   - { key: Left,     mods: Alt,           action: None }
   - { key: Right,    mods: Alt,           action: None }
+  - { key: F1,       mods: Alt,           action: None }
+  - { key: F2,       mods: Alt,           action: None }
+  - { key: F3,       mods: Alt,           action: None }
+  - { key: F4,       mods: Alt,           action: None }
 
   # (Windows only)
   #- { key: Return,   mods: Alt,           action: ToggleFullscreen }
