--- a/dot_files/prometheus/compton/config
+++ b/dot_files/prometheus/compton/config
@@ -1,5 +1,5 @@
 # SHADOW
-shadow                = true;         # Enabled client-side shadows on windows
+shadow                = false;        # Enabled client-side shadows on windows
 no-dock-shadow        = true;         # Avoid drawing shadows on dock/panel windows
 no-dnd-shadow         = true;         # Don't draw shadows on drag-and-drop windows
 clear-shadow          = true;         # Zero the part of the shadow's mask behind the window (experimental)
