--- a/dot_files/prometheus/sakura/sakura.conf
+++ b/dot_files/prometheus/sakura/sakura.conf
@@ -3,26 +3,6 @@ colorset1_fore=rgb(192,192,192)
 colorset1_back=rgba(0,0,0,0.70)
 colorset1_curs=rgb(255,255,255)
 colorset1_key=F1
-colorset2_fore=rgb(192,192,192)
-colorset2_back=rgba(0,0,0,1)
-colorset2_curs=rgb(255,255,255)
-colorset2_key=F2
-colorset3_fore=rgb(192,192,192)
-colorset3_back=rgba(0,0,0,1)
-colorset3_curs=rgb(255,255,255)
-colorset3_key=F3
-colorset4_fore=rgb(192,192,192)
-colorset4_back=rgba(0,0,0,1)
-colorset4_curs=rgb(255,255,255)
-colorset4_key=F4
-colorset5_fore=rgb(192,192,192)
-colorset5_back=rgba(0,0,0,1)
-colorset5_curs=rgb(255,255,255)
-colorset5_key=F5
-colorset6_fore=rgb(192,192,192)
-colorset6_back=rgba(0,0,0,1)
-colorset6_curs=rgb(255,255,255)
-colorset6_key=F6
 last_colorset=1
 scroll_lines=4096
 font=Iosevka Term Medium 13
@@ -64,3 +44,24 @@ decrease_font_size_key=minus
 fullscreen_key=F11
 set_colorset_accelerator=1
 icon_file=terminal-tango.svg
+opacity_level=50
+colorset2_fore=rgb(192,192,192)
+colorset2_back=rgba(0,0,0,1)
+colorset2_curs=rgb(255,255,255)
+colorset2_key=F2
+colorset3_fore=rgb(192,192,192)
+colorset3_back=rgba(0,0,0,1)
+colorset3_curs=rgb(255,255,255)
+colorset3_key=F3
+colorset4_fore=rgb(192,192,192)
+colorset4_back=rgba(0,0,0,1)
+colorset4_curs=rgb(255,255,255)
+colorset4_key=F4
+colorset5_fore=rgb(192,192,192)
+colorset5_back=rgba(0,0,0,1)
+colorset5_curs=rgb(255,255,255)
+colorset5_key=F5
+colorset6_fore=rgb(192,192,192)
+colorset6_back=rgba(0,0,0,1)
+colorset6_curs=rgb(255,255,255)
+colorset6_key=F6
