dot files pushed by user xavier666 for machine lazarus

--- a/dot_files/lazarus/alacritty/alacritty.yml
+++ b/dot_files/lazarus/alacritty/alacritty.yml
@@ -106,7 +106,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Iosevka Term
+    family: DaddyTimeMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -117,7 +117,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Iosevka Term
+    family: DaddyTimeMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -128,7 +128,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Iosevka Term
+    family: DaddyTimeMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -139,13 +139,13 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Iosevka Term
+    family: DaddyTimeMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
 
   # Point size
-  size: 9.0
+  size: 8.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -242,7 +242,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.50
+background_opacity: 0.60
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
