--- a/dot_files/lazarus/compton/config
+++ b/dot_files/lazarus/compton/config
@@ -1,11 +1,11 @@
 # SHADOW
-shadow              = true;           # Enabled client-side shadows on windows
-no-dock-shadow      = true;           # Avoid drawing shadows on dock/panel windows
-no-dnd-shadow       = true;           # Don't draw shadows on drag-and-drop windows
-clear-shadow        = true;           # Zero the part of the shadow's mask behind the window (experimental)
-shadow-radius       = 8;              # The blur radius for shadows (default 12)
-shadow-offset-x     = -5;             # The left offset for shadows (default -15)
-shadow-offset-y     = -5;             # The top offset for shadows (default -15)
+shadow                = false;          # Enabled client-side shadows on windows
+no-dock-shadow        = true;           # Avoid drawing shadows on dock/panel windows
+no-dnd-shadow         = true;           # Don't draw shadows on drag-and-drop windows
+clear-shadow          = true;           # Zero the part of the shadow's mask behind the window (experimental)
+shadow-radius         = 8;              # The blur radius for shadows (default 12)
+shadow-offset-x       = -5;             # The left offset for shadows (default -15)
+shadow-offset-y       = -5;             # The top offset for shadows (default -15)
 
 # BLUR
 blur-background       = true;
@@ -16,8 +16,8 @@ blur-method           = "kawase";
 blur-strength         = 7;
 
 # VSYNC
-backend             = "glx";
-vsync               = "opengl-swc";
+backend               = "glx";
+vsync                 = "opengl-swc";
 
 # WORKSPACE FADING
 fading                = true;
