--- a/dot_files/prometheus/i3/config
+++ b/dot_files/prometheus/i3/config
@@ -7,39 +7,41 @@ set $EDITOR             gedit
 set $USER               xavier666
 set $SCRIPT_DIR         /home/$USER/Documents/scripts_dir
 set $HOME               /home/$USER
+set $BOR_WIDTH          0
+set $BOR_RADIUS         4
+set $BOR_SCRATCH        6
+set $GAP_INNER          6
+set $DISPLAY_DEV_1      DP-1
+set $DISPLAY_DEV_2      DP-2
+
 set $mod                Mod1
-set $bor_width          0
-set $bor_radius         4
-set $scratch_border     6
-set $gap_inner          6
-set $display_dev_1      DP-1
-set $display_dev_2      DP-2
+set $mod-alt            Mod4
 
 #----------------------- i3 configuration --------------------------------------
 
 font                    pango:Iosevka Term Regular 10
 floating_modifier       $mod
 focus_follows_mouse     no
-border_radius           $bor_radius
+border_radius           $BOR_RADIUS
 
 # no title for windows AND a tiny border pixel
-for_window [class="^.*"] border pixel $bor_width
+for_window [class="^.*"] border pixel $BOR_WIDTH
 
 ## binding workspace to display
-workspace "1"           output $display_dev_1
-workspace "2"           output $display_dev_1
-workspace "3"           output $display_dev_1
-workspace "4"           output $display_dev_1
-workspace "9"           output $display_dev_1
+workspace "1"           output $DISPLAY_DEV_1
+workspace "2"           output $DISPLAY_DEV_1
+workspace "3"           output $DISPLAY_DEV_1
+workspace "4"           output $DISPLAY_DEV_1
+workspace "9"           output $DISPLAY_DEV_1
 
-workspace "5"           output $display_dev_2
-workspace "6"           output $display_dev_2
-workspace "7"           output $display_dev_2
-workspace "8"           output $display_dev_2
-workspace "10"          output $display_dev_2
+workspace "5"           output $DISPLAY_DEV_2
+workspace "6"           output $DISPLAY_DEV_2
+workspace "7"           output $DISPLAY_DEV_2
+workspace "8"           output $DISPLAY_DEV_2
+workspace "10"          output $DISPLAY_DEV_2
 
 # creating gaps between the windows
-gaps inner              $gap_inner
+gaps inner              $GAP_INNER
 gaps outer              0
 gaps horizontal         0
 gaps vertical           0
@@ -62,12 +64,12 @@ client.background       #ffffff
 for_window[instance="scratch_py"] floating enable
 for_window[instance="scratch_py"] resize set 925 500
 for_window[instance="scratch_py"] move scratchpad
-for_window[instance="scratch_py"] border pixel $scratch_border
+for_window[instance="scratch_py"] border pixel $BOR_SCRATCH
 
 for_window[instance="scratch_term"] floating enable
 for_window[instance="scratch_term"] resize set 925 500
 for_window[instance="scratch_term"] move scratchpad
-for_window[instance="scratch_term"] border pixel $scratch_border
+for_window[instance="scratch_term"] border pixel $BOR_SCRATCH
 
 #----------------------- autostart with i3 -------------------------------------
 
@@ -139,10 +141,10 @@ bindsym $mod+Ctrl+Up            resize shrink height        1 px or 1 ppt
 bindsym $mod+Ctrl+Right         resize grow width           1 px or 1 ppt
 
 # dynamically changing inner and outer gaps
-bindsym Mod4+h                  gaps inner current plus     2
-bindsym Mod4+l                  gaps inner current minus    2
-bindsym Mod4+j                  gaps outer current minus    2
-bindsym Mod4+k                  gaps outer current plus     2
+bindsym $mod-alt+h              gaps inner current plus     2
+bindsym $mod-alt+l              gaps inner current minus    2
+bindsym $mod-alt+j              gaps outer current minus    2
+bindsym $mod-alt+k              gaps outer current plus     2
 
 #----------------------- workspace keybindings ---------------------------------
 
@@ -199,8 +201,8 @@ bindsym $mod+Scroll_Lock        exec --no-startup-id cmus-remote -v -5%
 bindsym $mod+Pause              exec --no-startup-id cmus-remote -v +5%
 
 ## Redshift
-bindsym Mod4+F5                 exec redshift -O 3700k
-bindsym Mod4+F6                 exec redshift -O 5500k
+bindsym $mod-alt+F5             exec redshift -O 3700k
+bindsym $mod-alt+F6             exec redshift -O 5500k
 
 ## COMPTON only
 bindsym F9                      exec --no-startup-id killall compton
