--- a/dot_files/prometheus/alacritty/alacritty.yml
+++ b/dot_files/prometheus/alacritty/alacritty.yml
@@ -106,7 +106,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: DaddyTimeMono Nerd Font 
+    family: Hasklug Nerd Font 
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -117,7 +117,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: DaddyTimeMono Nerd Font
+    family: Hasklug Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -128,7 +128,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: DaddyTimeMono Nerd Font
+    family: Hasklug Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -139,13 +139,13 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: DaddyTimeMono Nerd Font
+    family: Hasklug Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 13.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
