dot files pushed by user xavier666 for machine prometheus

--- a/dot_files/prometheus/i3/config
+++ b/dot_files/prometheus/i3/config
@@ -10,12 +10,13 @@ set $HOME               /home/$USER
 set $BOR_WIDTH          0
 set $BOR_RADIUS         4
 set $BOR_SCRATCH        6
-set $GAP_INNER          6
-set $DISPLAY_DEV_1      DP-1
-set $DISPLAY_DEV_2      DP-2
+set $GAP_INNER          10
+set $DISPLAY_DEV_1      DP-1-1
+set $DISPLAY_DEV_2      DP-1-2
+set $INC_VAL            7
 
 set $mod                Mod1
-set $mod-alt            Mod4
+set $mod_alt            Mod4
 
 #----------------------- i3 configuration --------------------------------------
 
@@ -71,14 +72,20 @@ for_window[instance="scratch_term"] resize set 925 500
 for_window[instance="scratch_term"] move scratchpad
 for_window[instance="scratch_term"] border pixel $BOR_SCRATCH
 
+#----------------------- force floating ----------------------------------------
+
+for_window[title="Steam - News"] floating enable
+for_window[title="Friends List"] floating enable
+
 #----------------------- autostart with i3 -------------------------------------
 
-exec_always     --no-startup-id compton --config $HOME/.config/compton/config
-exec_always     --no-startup-id $HOME/.config/polybar/launch.sh
-exec_always     --no-startup-id dunst -config $HOME/.config/dunst/dunstrc
+exec            --no-startup-id xrandr --output $DISPLAY_DEV_1 --mode 1600x900 --left-of $DISPLAY_DEV_2 --mode 1600x900
+exec            --no-startup-id compton --config $HOME/.config/compton/config
 exec            --no-startup-id nitrogen --restore
 exec            --no-startup-id $TERMINAL --class="scratch_term"
 exec            --no-startup-id $TERMINAL --class="scratch_py" -e ipython3 --no-banner
+exec_always     --no-startup-id $HOME/.config/polybar/launch.sh
+exec_always     --no-startup-id dunst -config $HOME/.config/dunst/dunstrc
 
 #----------------------- i3 keybindings ----------------------------------------
 
@@ -101,8 +108,14 @@ bindsym $mod+e                  layout toggle split
 # toggle tiling / floating
 bindsym $mod+Shift+space        floating toggle
 
+# toggle current window sticky
+bindsym $mod+Shift+t            sticky toggle
+
 # change focus between tiling / floating windows
 bindsym $mod+space              focus mode_toggle
+
+# change to RESIZE mode
+bindsym $mod+r                  mode "RESIZE"
 
 # change focus
 bindsym $mod+h                  focus left
@@ -140,11 +153,30 @@ bindsym $mod+Ctrl+Down          resize grow height          1 px or 1 ppt
 bindsym $mod+Ctrl+Up            resize shrink height        1 px or 1 ppt
 bindsym $mod+Ctrl+Right         resize grow width           1 px or 1 ppt
 
+mode "RESIZE"
+{
+    # resizing windows on the fly
+    bindsym $mod+Ctrl+h             resize shrink width         $INC_VAL px or $INC_VAL ppt
+    bindsym $mod+Ctrl+j             resize grow height          $INC_VAL px or $INC_VAL ppt
+    bindsym $mod+Ctrl+k             resize shrink height        $INC_VAL px or $INC_VAL ppt
+    bindsym $mod+Ctrl+l             resize grow width           $INC_VAL px or $INC_VAL ppt
+    
+    # same bindings, but for the arrow keys
+    bindsym $mod+Ctrl+Left          resize shrink width         $INC_VAL px or $INC_VAL ppt
+    bindsym $mod+Ctrl+Down          resize grow height          $INC_VAL px or $INC_VAL ppt
+    bindsym $mod+Ctrl+Up            resize shrink height        $INC_VAL px or $INC_VAL ppt
+    bindsym $mod+Ctrl+Right         resize grow width           $INC_VAL px or $INC_VAL ppt
+
+    # escape to default mode
+    bindsym $mod+Escape             mode default
+    bindsym $mod+r                  mode default
+}
+
 # dynamically changing inner and outer gaps
-bindsym $mod-alt+h              gaps inner current plus     2
-bindsym $mod-alt+l              gaps inner current minus    2
-bindsym $mod-alt+j              gaps outer current minus    2
-bindsym $mod-alt+k              gaps outer current plus     2
+bindsym $mod_alt+h              gaps inner current plus     2
+bindsym $mod_alt+l              gaps inner current minus    2
+bindsym $mod_alt+j              gaps outer current minus    2
+bindsym $mod_alt+k              gaps outer current plus     2
 
 #----------------------- workspace keybindings ---------------------------------
 
@@ -201,8 +233,8 @@ bindsym $mod+Scroll_Lock        exec --no-startup-id cmus-remote -v -5%
 bindsym $mod+Pause              exec --no-startup-id cmus-remote -v +5%
 
 ## Redshift
-bindsym $mod-alt+F5             exec redshift -O 3700k
-bindsym $mod-alt+F6             exec redshift -O 5500k
+bindsym $mod_alt+F5             exec redshift -O 3700k
+bindsym $mod_alt+F6             exec redshift -O 5500k
 
 ## COMPTON only
 bindsym F9                      exec --no-startup-id killall compton
@@ -220,13 +252,15 @@ bindsym $mod+m                  [instance="scratch_py"]   scratchpad show; [inst
 bindsym $mod+Return             exec --no-startup-id $TERMINAL
 bindsym $mod+Shift+o            exec --no-startup-id $BROWSER 
 bindsym $mod+Shift+p            exec --no-startup-id $FILE_MANAGER
-bindsym $mod+Shift+f            exec --no-startup-id firefox
-bindsym $mod+Shift+i            exec --no-startup-id $TERMINAL -e vim 
+bindsym $mod+Shift+i            exec --no-startup-id $TERMINAL -e vim
 bindsym $mod+Shift+y            exec --no-startup-id yakyak
-bindsym $mod+d                  exec --no-startup-id rofi -show run -lines 7 -width 40 -display-run "> "
+bindsym $mod+d                  exec --no-startup-id rofi -show run -lines 7 -width 40 -display-run "> " -show-icons
 bindsym $mod+s                  exec --no-startup-id $SCRIPT_DIR/standalone/power_menu
 bindsym $mod+q                  exec --no-startup-id i3lock-fancy -f Iosevka-Term-Bold
 
 #----------------------- binding applications to workspace ---------------------
 
-assign [class="yakyak"] "10"
+assign [class="yakyak"]         "10"
+assign [class="Steam"]          "8"
+
+#-------------------------------------------------------------------------------
