--- a/dot_files/prometheus/polybar/config.ini
+++ b/dot_files/prometheus/polybar/config.ini
@@ -1,6 +1,6 @@
 [colors]
-    background      = #00000111
-    background-alt  = #444
+    background      = #AF000000
+    background-alt  = #0a6cf5
     foreground      = #dfdfdf
     foreground-alt  = #639fff
     primary         = #ffb52a
@@ -11,24 +11,25 @@
     cpu_temp        = /home/xavier666/Documents/scripts_dir/polybar/cpu_temp
 
 [size]
-    bar_height      = 24
+    bar_height      = 25
     bar_font        = 22
+    bar_width       = 100%
     line_size       = 0
     line_color      = #0a6cf5
     bar_radius      = 0
     bar_border_size = 0
 
 [style]
-    bar_font_style  = "Iosevka Term:style=Regular:size=10;1"
+    bar_font_style  = "Cascadia Mono Pl:style=Regular:size=10;1"
     bar_icon_style  = "FontAwesome:style=Regular:size=10;1"
 
 [bar/bar1]
     monitor         = ${env:MONITOR:DP-1-1}
-    width           = 100%
+    width           = ${size.bar_width}
     height          = ${size.bar_height}
     radius          = ${size.bar_radius}
-    fixed-center    = false
-    bottom          = false 
+    fixed-center    = false 
+    bottom          = false
 
     background      = ${colors.background}
     foreground      = ${colors.foreground}
@@ -60,7 +61,7 @@
 
 [bar/bar2]
     monitor         = ${env:MONITOR:DP-1-2}
-    width           = 100%
+    width           = ${size.bar_width}
     height          = ${size.bar_height}
     radius          = ${size.bar_radius}
     fixed-center    = false
@@ -313,9 +314,9 @@
 
     date = "%a %d %B, %Y"
 
-	format-prefix = " " 
+    format-prefix = " " 
     format-prefix-foreground = ${colors.foreground-alt}
-    label = %date%
+    label = %date:22:22%
 
 [module/only_time]
     type = internal/date
@@ -326,7 +327,7 @@
     format-prefix =  " "
     format-prefix-foreground = ${colors.foreground-alt}
     format-underline = ${size.line_color}
-    label = %time%
+    label = %time:9:9%
 
 [module/pulseaudio]
     type = internal/pulseaudio
