--- a/dot_files/lazarus/polybar/config
+++ b/dot_files/lazarus/polybar/config
@@ -1,5 +1,5 @@
 [colors]
-    background      = #AF000000
+    background      = #9F000000
     background-alt  = #0a6cf5
     foreground      = #dfdfdf
     foreground-alt  = #639fff
@@ -13,10 +13,8 @@
 
 [size]
     bar_height      = 25
-    bar_font        = 22
     bar_width       = 100%
     line_size       = 0
-    line_color      = #0a6cf5
     bar_radius      = 0
     bar_border_size = 0
 
@@ -52,7 +50,7 @@
 
     modules-left    = bspwm i3 
     modules-center  = only_date only_time
-    modules-right   = wlan_down wlan_up wlan eth_down eth_up eth backlight pulseaudio
+    modules-right   = wlan_down wlan_up wlan eth_down eth_up eth
 
     tray-position   = right
     tray-padding    = 0
@@ -86,7 +84,7 @@
     font-0          = ${style.bar_font_style}
     font-1          = ${style.bar_icon_style}
 
-    modules-right   = cpu memory disk battery temperature filesystem battery_charge 
+    modules-right   = backlight pulseaudio battery cpu memory disk temperature filesystem battery_charge 
 
     tray-position   = right
     tray-padding    = 0
@@ -155,7 +153,7 @@
     interval = 2
     format-prefix = " "
     format-prefix-foreground = ${colors.foreground-alt}
-    format-underline = ${size.line_color}
+    format-underline = ${colors.background-alt}
     label = %percentage:3:3%%
 
 [module/memory]
@@ -163,20 +161,19 @@
     interval = 2
     format-prefix = " "
     format-prefix-foreground = ${colors.foreground-alt}
-    ;format-background = #ababab
-    format-underline = ${size.line_color}
+    format-underline = ${colors.background-alt}
     label = %percentage_used:3:3%%
 
 [module/filesystem]
     type = internal/fs
     interval = 25
 
-    mount-0 = /
+    mount-0 = /home
     format-prefix-foreground = ${colors.foreground-alt}
-    format-underline = ${size.line_color}
+    format-underline = ${colors.background-alt}
 
     ;label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-    label-mounted = %{F#639fff}%{F-} %percentage_used%%
+    label-mounted = %{F#639fff}%{F-} %percentage_used:3:3%%
     label-unmounted = %mountpoint% not mounted
     label-unmounted-foreground = ${colors.foreground-alt}
 
@@ -186,7 +183,7 @@
     tail = true
     interval = 5
     format-prefix = " "
-    label = %output%°C
+    label = %output:3:3%°C
 
     format-prefix-foreground = ${colors.foreground-alt}
 
@@ -198,14 +195,11 @@
     format-connected-prefix = " "
     format-connected-prefix-foreground = ${colors.foreground-alt}
     format-connected = <ramp-signal> <label-connected>
-    format-connected-underline = ${size.line_color}
+    format-connected-underline = ${colors.background-alt}
     label-connected = %essid%
 
-    format-disconnected =
-    ;format-disconnected = <label-disconnected>
-    ;format-disconnected-underline = ${self.format-connected-underline}
-    ;label-disconnected = %ifname% disconnected
-    ;label-disconnected-foreground = ${colors.foreground-alt}
+    format-disconnected = "  "
+    format-disconnected-foreground = ${colors.foreground-alt}
 
     ramp-signal-0 = 
     ramp-signal-1 = 
@@ -238,13 +232,13 @@
     interval = 5.0
 
     format-connected-underline = #55aa55
-    format-connected-prefix = "  "
-    label-connected = ""
+    format-connected-prefix = " "
+    label-connected = ""
     format-connected-prefix-foreground = ${colors.foreground-alt}
 
-    format-disconnected-prefix = "  "
+    format-disconnected-prefix = " "
     format-disconnected-prefix-foreground = ${colors.foreground-alt}
-    label-disconnected = ""
+    label-disconnected = ""
     label-disconnected-foreground = ${colors.foreground-alt}
 
 [module/eth_up]
@@ -252,7 +246,7 @@
     interface = eth0
     interval = 1.0
 
-    format-connected-underline = ${size.line_color}
+    format-connected-underline = ${colors.background-alt}
     format-connected-prefix = " "
     format-connected-prefix-foreground = ${colors.foreground-alt}
     label-connected = %upspeed:8:8%
@@ -262,7 +256,7 @@
     interface = eth0
     interval = 1.0
 
-    format-connected-underline = ${size.line_color}
+    format-connected-underline = ${colors.background-alt}
     format-connected-prefix = " "
     format-connected-prefix-foreground = ${colors.foreground-alt}
     label-connected = %downspeed:8:8%
@@ -327,31 +321,28 @@
     
     format-prefix =  " "
     format-prefix-foreground = ${colors.foreground-alt}
-    format-underline = ${size.line_color}
+    format-underline = ${colors.background-alt}
     label = %time:9:9%
 
 [module/pulseaudio]
     type = internal/pulseaudio
 
-    ;format-volume = <label-volume> <bar-volume>
     label-volume = %percentage:3:3%%
-    format-volume =  <label-volume>
-    format-underline = ${size.line_color}
+    format-volume =  <label-volume>
+    format-underline = ${colors.background-alt}
     label-volume-foreground = ${root.foreground}
 
     format-volume-foreground = ${colors.foreground-alt}
-    format-volume-underline = ${size.line_color}
+    format-volume-underline = ${colors.background-alt}
 
-    label-muted =  
-    label-muted-foreground = #639fff
+    label-muted = " "
+    label-muted-foreground = ${colors.foreground-alt}
 
 [module/backlight]
     type = internal/backlight
 
     card = intel_backlight
 
-    ; Create scroll handlers used to set the backlight value
-    ; Default: true
     enable-scroll = true
 
     format = <label>
