--- a/dot_files/prometheus/polybar/config.ini
+++ b/dot_files/prometheus/polybar/config.ini
@@ -11,15 +11,16 @@
     cpu_temp        = /home/xavier666/Documents/scripts_dir/polybar/cpu_temp
 
 [size]
-    bar_height      = 25
+    bar_height      = 22
     bar_width       = 100%
     line_size       = 0
-    bar_radius      = 0
-    bar_border_size = 0
+    bar_radius      = 8
+    bar_border_size = 4
+    label_padding   = 1
 
 [style]
-    bar_font_style  = "Cascadia Mono Pl:style=Regular:size=10;1"
-    bar_icon_style  = "FontAwesome:style=Regular:size=10;1"
+    bar_font_style  = "Cascadia Mono Pl:style=Regular:size=10;2"
+    bar_icon_style  = "FontAwesome:style=Regular:size=10;2"
 
 [bar/bar1]
     monitor         = ${env:MONITOR:DP-1-1}
@@ -38,7 +39,7 @@
     border-size     = ${size.bar_border_size}
     border-color    = #0000000
 
-    padding-left    = 1
+    padding-left    = 0
     padding-right   = 1
 
     module-margin-left  = 1
@@ -47,7 +48,7 @@
     font-0          = ${style.bar_font_style}
     font-1          = ${style.bar_icon_style}
 
-    modules-left    = bspwm i3 
+    modules-left    = i3 
     modules-center  = only_date only_time
     modules-right   = eth_down eth_up eth
 
@@ -74,7 +75,7 @@
     border-size     = ${size.bar_border_size}
     border-color    = #00000000
 
-    padding-left    = 1
+    padding-left    = 0
     padding-right   = 1
 
     module-margin-left  = 1
@@ -83,7 +84,7 @@
     font-0          = ${style.bar_font_style}
     font-1          = ${style.bar_icon_style}
 
-    modules-left    = bspwm i3 
+    modules-left    = i3 
     modules-center  = only_date only_time
     modules-right   = pulseaudio cpu memory disk temperature filesystem
 
@@ -92,28 +93,6 @@
 
     cursor-click    = pointer
     cursor-scroll   = ns-resize
-
-[module/bspwm]
-    type = internal/bspwm
-
-    label-focused = %index%
-    label-focused-background = ${colors.background-alt}
-    label-focused-underline= ${colors.primary}
-    label-focused-padding = 2
-
-    label-occupied = %index%
-    label-occupied-padding = 2
-
-    label-urgent = %index%!
-    label-urgent-background = ${colors.alert}
-    label-urgent-padding = 2
-
-    label-empty = %index%
-    label-empty-foreground = ${colors.foreground-alt}
-    label-empty-padding = 2
-
-    ;Separator in between workspaces
-    ;label-separator = |
 
 [module/i3]
     type = internal/i3
@@ -124,30 +103,30 @@
     ; Only show workspaces on the same output as the bar
     pin-workspaces = true
 
-    label-mode-padding = 2
-    label-mode-foreground = #000
-    label-mode-background = ${colors.primary}
+    label-mode-foreground    = #000
+    label-mode-background    = ${colors.primary}
+    label-mode-padding       = ${size.label_padding}
 
     ; focused = Active workspace on focused monitor
-    label-focused = %index%
-    label-focused-background = ${module/bspwm.label-focused-background}
-    label-focused-underline = ${module/bspwm.label-focused-underline}
-    label-focused-padding = ${module/bspwm.label-focused-padding}
+    label-focused            = %index%
+    label-focused-background = ${colors.background-alt}
+    label-focused-underline  = ${colors.primary}
+    label-focused-padding    = ${size.label_padding}
 
     ; unfocused = Inactive workspace on any monitor
-    label-unfocused = %index%
-    label-unfocused-padding = ${module/bspwm.label-occupied-padding}
+    label-unfocused          = %index%
+    label-unfocused-padding  = ${size.label_padding}
 
     ; visible = Active workspace on unfocused monitor
-    label-visible = %index%
+    label-visible            = %index%
     label-visible-background = ${self.label-focused-background}
-    label-visible-underline = ${self.label-focused-underline}
-    label-visible-padding = ${self.label-focused-padding}
+    label-visible-underline  = ${self.label-focused-underline}
+    label-visible-padding    = ${size.label_padding}
 
     ; urgent = Workspace with urgency hint set
-    label-urgent = %index%
-    label-urgent-background = ${module/bspwm.label-urgent-background}
-    label-urgent-padding = ${module/bspwm.label-urgent-padding}
+    label-urgent             = %index%
+    label-urgent-background  = ${colors.alert}
+    label-urgent-padding     = ${size.label_padding}
 
 [module/cpu]
     type = internal/cpu
